add prettier and editorconfig

--- a/package.json
+++ b/package.json
@@ -31,16 +31,18 @@
     "@types/mocha": "7.0.2",
     "@types/node": "14.0.5",
     "bignumber.js": "9.0.0",
-    "chai": "4.2.0",
-    "typechain": "2.0.0",
     "buidler-typechain": "0.1.1",
+    "chai": "4.2.0",
     "ethereum-waffle": "2.5.1",
-    "solidity-coverage": "0.7.5",
     "ethers": "4.0.47",
-    "lowdb": "1.0.0",
-    "ts-generator": "0.0.8",
     "ganache-cli": "6.9.1",
+    "lowdb": "1.0.0",
+    "prettier": "^2.0.5",
+    "prettier-plugin-solidity": "^1.0.0-alpha.53",
+    "solidity-coverage": "0.7.5",
+    "ts-generator": "0.0.8",
     "ts-node": "8.10.2",
+    "typechain": "2.0.0",
     "typescript": "3.9.3"
   },
   "author": "Aave",
