--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
       "node_modules/@nomiclabs/buidler-ethers/src/type-extensions.d.ts",
       "node_modules/buidler-typechain/src/type-extensions.d.ts",
       "node_modules/@nomiclabs/buidler-waffle/src/type-extensions.d.ts",
-      "node_modules/@nomiclabs/buidler-etherscan/src/type-extensions.d.ts"
+      "node_modules/@nomiclabs/buidler-etherscan/src/type-extensions.d.ts",
+      "node_modules/@nomiclabs/buidler-ganache/src/type-extensions.d.ts"
     ]
   }
   
