- Changed ganache version

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - ./:/src
 
   ganache:
-    image: trufflesuite/ganache-cli:next
+    image: trufflesuite/ganache-cli:latest
     ports:
       - "8545:8545"
     command: [
