--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       context: ./
     working_dir: /src
     command: npm run run-env
+    depends_on:
+      - ganache
     volumes:
       - ./:/src
 
