- Finished migration of configurator.spec.ts

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bignumber.js": "9.0.0",
     "buidler-typechain": "0.1.1",
     "chai": "4.2.0",
+    "chai-bignumber": "3.0.0",
     "ethereum-waffle": "2.5.1",
     "ethers": "4.0.47",
     "ganache-cli": "6.9.1",
