--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
     "prettier-plugin-solidity": "^1.0.0-alpha.53",
     "solidity-coverage": "0.7.5",
     "ts-generator": "0.0.8",
+    "tslint": "^6.1.2",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-plugin-prettier": "^2.3.0",
     "ts-node": "8.10.2",
     "typechain": "2.0.0",
     "typescript": "3.9.3"
