--- a/package.json
+++ b/package.json
@@ -38,15 +38,16 @@
     "ethereum-waffle": "2.5.1",
     "ethers": "4.0.47",
     "ganache-cli": "6.9.1",
+    "husky": "^4.2.5",
     "lowdb": "1.0.0",
     "prettier": "^2.0.5",
     "prettier-plugin-solidity": "^1.0.0-alpha.53",
     "solidity-coverage": "0.7.5",
     "ts-generator": "0.0.8",
+    "ts-node": "8.10.2",
     "tslint": "^6.1.2",
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.3.0",
-    "ts-node": "8.10.2",
     "typechain": "2.0.0",
     "typescript": "3.9.3"
   },
