--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/mocha": "7.0.2",
     "@types/node": "14.0.5",
     "bignumber.js": "9.0.0",
+    "buidler-gas-reporter": "^0.1.3",
     "buidler-typechain": "0.1.1",
     "chai": "4.2.0",
     "chai-bignumber": "3.0.0",
