--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ test:
   before_script:
     - docker-compose -f docker-compose.test.yml build
   script:
-    - docker-compose -f docker-compose.test.yml run contracts-env npm run test
+    - docker-compose -f docker-compose.test.yml run contracts-env npm run ci:test
   after_script:
     - docker-compose -f docker-compose.test.yml run contracts-env npm run ci:clean
     - docker-compose -f docker-compose.test.yml down
