Added pool configuration manager with "config" library.

--- a/package.json
+++ b/package.json
@@ -5,23 +5,28 @@
   "scripts": {
     "run-env": "npm i && tail -f /dev/null",
     "buidler": "buidler",
-    "buidler-kovan": "buidler --network kovan",
-    "buidler-ropsten": "buidler --network ropsten",
-    "buidler-main": "buidler --network main",
+    "buidler:aave": "POOL=aave buidler",
+    "buidler:aave:kovan": "npm run buidler:aave -- --network kovan",
+    "buidler:aave:ropsten": "npm run buidler:aave -- --network ropsten",
+    "buidler:aave:main": "npm run buidler:aave -- --network main",
+    "buidler:uniswap": "POOL=uniswap buidler",
+    "buidler:uniswap:kovan": "npm run buidler:uniswap -- --network kovan",
+    "buidler:uniswap:ropsten": "npm run buidler:uniswap --network ropsten",
+    "buidler:uniswap:main": "npm run buidler:uniswap --network main",
     "buidler help": "buidler help",
     "compile": "buidler compile",
     "types-gen": "typechain --target ethers-v5 --outDir ./types './artifacts/*.json'",
     "test": "buidler test",
     "test-scenarios": "buidler test test/__setup.spec.ts test/scenario.spec.ts",
     "coverage": "buidler coverage",
-    "evm:dev:migration": "buidler dev-migration",
-    "evm:full:migration": "buidler full-migration",
-    "kovan:dev:migration": "npm run buidler-kovan -- dev-migration --verify",
-    "kovan:full:migration": "npm run buidler-kovan -- full-migration --verify",
-    "ropsten:dev:migration": "npm run buidler-ropsten -- dev-migration --verify",
-    "ropsten:full:migration": "npm run buidler-ropsten -- full-migration --verify",
-    "main:dev:migration": "npm run buidler-main -- dev-migration --verify",
-    "main:full:migration": "npm run buidler-main -- full-migration --verify"
+    "aave:evm:dev:migration": "npm run buidler:aave -- dev-migration",
+    "aave:evm:full:migration": "buidler full-migration",
+    "aave:kovan:dev:migration": "npm run buidler:aave:kovan -- dev-migration --verify",
+    "aave:kovan:full:migration": "npm run buidler:aave:kovan -- full-migration --verify",
+    "aave:ropsten:dev:migration": "npm run buidler:aave:ropsten -- dev-migration --verify",
+    "aave:ropsten:full:migration": "npm run buidler:aave:ropsten -- full-migration --verify",
+    "aave:main:dev:migration": "npm run buidler:aave:main -- dev-migration --verify",
+    "uniswap:evm:dev:migration": "npm run buidler:uniswap -- dev-migration"
   },
   "devDependencies": {
     "@nomiclabs/buidler": "1.4.4",
@@ -29,12 +34,13 @@
     "@nomiclabs/buidler-etherscan": "1.3.3",
     "@nomiclabs/buidler-waffle": "2.0.0",
     "@openzeppelin/contracts": "3.1.0",
-    "@typechain/ethers-v5": "^1.0.0",
     "@typechain/ethers-v4": "1.0.0",
+    "@typechain/ethers-v5": "^1.0.0",
     "@typechain/truffle-v4": "2.0.2",
     "@typechain/truffle-v5": "2.0.2",
     "@typechain/web3-v1": "1.0.0",
     "@types/chai": "4.2.11",
+    "@types/config": "0.0.36",
     "@types/lowdb": "1.0.9",
     "@types/mocha": "7.0.2",
     "@types/node": "14.0.5",
@@ -48,6 +54,7 @@
     "ethers": "5.0.8",
     "husky": "^4.2.5",
     "lowdb": "1.0.0",
+    "node-config": "0.0.2",
     "prettier": "^2.0.5",
     "prettier-plugin-solidity": "^1.0.0-alpha.53",
     "pretty-quick": "^2.0.1",
