Moved type outside of types due missing types prior compilation

--- a/package.json
+++ b/package.json
@@ -55,11 +55,11 @@
     "chai": "4.2.0",
     "chai-bignumber": "3.0.0",
     "chai-bn": "^0.2.1",
+    "config": "^3.3.1",
     "ethereum-waffle": "3.0.2",
     "ethers": "5.0.8",
     "husky": "^4.2.5",
     "lowdb": "1.0.0",
-    "node-config": "0.0.2",
     "prettier": "^2.0.5",
     "prettier-plugin-solidity": "^1.0.0-alpha.53",
     "pretty-quick": "^2.0.1",
