--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,7 @@
   "trailingComma": "es5",
   "semi": true,
   "singleQuote": true,
+  "tabWidth": 2,
   "overrides": [
     {
       "files": "*.sol",
