Added migration scripts for Uniswap and Aave with configuration and common tasks

--- a/package.json
+++ b/package.json
@@ -21,7 +21,14 @@
     "aave:ropsten:full:migration": "npm run buidler:ropsten -- aave:full --verify",
     "aave:main:dev:migration": "npm run buidler:main -- aave:dev --verify",
     "aave:main:full:migration": "npm run buidler:main -- aave:full --verify",
-    "uniswap:evm:dev:migration": "npm run buidler:uniswap -- uniswap:dev",
+    "uniswap:evm:dev:migration": "buidler uniswap:dev",
+    "uniswap:evm:full:migration": "buidler uniswap:full",
+    "uniswap:kovan:dev:migration": "npm run buidler:kovan -- uniswap:dev --verify",
+    "uniswap:kovan:full:migration": "npm run buidler:kovan -- uniswap:full --verify",
+    "uniswap:ropsten:dev:migration": "npm run buidler:ropsten -- uniswap:dev --verify",
+    "uniswap:ropsten:full:migration": "npm run buidler:ropsten -- uniswap:full --verify",
+    "uniswap:main:dev:migration": "npm run buidler:main -- uniswap:dev --verify",
+    "uniswap:main:full:migration": "npm run buidler:main -- uniswap:full --verify",
     "dev:coverage": "buidler coverage",
     "dev:deployment": "buidler dev-deployment",
     "dev:deployExample": "buidler deploy-Example",
