--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test-scenarios": "buidler test test/__setup.spec.ts test/scenario.spec.ts",
     "test-repay-with-collateral": "buidler test test/__setup.spec.ts test/repay-with-collateral.spec.ts",
     "test-liquidate-with-collateral": "buidler test test/__setup.spec.ts test/flash-liquidation-with-collateral.spec.ts",
-    "dev:coverage": "buidler coverage",
+    "dev:coverage": "buidler coverage --network coverage",
     "dev:deployment": "buidler dev-deployment",
     "dev:deployExample": "buidler deploy-Example",
     "dev:prettier": "prettier --write .",
