--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "types-gen": "typechain --target ethers-v5 --outDir ./types './artifacts/*.json'",
     "test": "buidler test",
     "test-scenarios": "buidler test test/__setup.spec.ts test/scenario.spec.ts",
+    "aave:evm:dev:scenarios:basicflow": "buidler aave:basicFlow",
     "aave:evm:dev:migration": "buidler aave:dev",
     "aave:evm:full:migration": "buidler aave:full",
     "aave:kovan:dev:migration": "npm run buidler:kovan -- aave:dev --verify",
