added script to deploy docker net

--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
     "buidler:kovan": "buidler --network kovan",
     "buidler:ropsten": "buidler--network ropsten",
     "buidler:main": "buidler --network main",
+    "buidler:docker": "buidler --network buidlerevm_docker",
     "buidler help": "buidler help",
     "compile": "SKIP_LOAD=true buidler compile",
     "types-gen": "typechain --target ethers-v5 --outDir ./types './artifacts/*.json'",
     "test": "buidler test",
     "test-scenarios": "buidler test test/__setup.spec.ts test/scenario.spec.ts",
     "aave:evm:dev:scenarios:basicflow": "buidler aave:basicFlow",
+    "aave:evm:docker:scenarios:basicflow": "npm run buidler:docker aave:basicFlow",
     "aave:evm:dev:migration": "buidler aave:dev",
     "aave:evm:full:migration": "buidler aave:full",
+    "aave:docker:dev:migration": "npm run buidler:docker -- aave:dev",
+    "aave:docker:full:migration": "npm run buidler:docker -- aave:full",
     "aave:kovan:dev:migration": "npm run buidler:kovan -- aave:dev --verify",
     "aave:kovan:full:migration": "npm run buidler:kovan -- aave:full --verify",
     "aave:ropsten:dev:migration": "npm run buidler:ropsten -- aave:dev --verify",
