--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "ethereum-waffle": "3.0.2",
     "ethereumjs-util": "7.0.2",
     "ethers": "5.0.8",
+    "globby": "^11.0.1",
     "husky": "^4.2.5",
     "lowdb": "1.0.0",
     "prettier": "^2.0.5",
