--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "aave:evm:dev:migration": "buidler aave:dev",
     "aave:evm:full:migration": "buidler aave:full",
     "aave:kovan:dev:migration": "npm run buidler:kovan -- aave:dev --verify",
-    "aave:kovan:full:migration": "npm run buidler:kovan -- aave:full",
+    "aave:kovan:full:migration": "npm run buidler:kovan -- aave:full --verify",
     "aave:ropsten:dev:migration": "npm run buidler:ropsten -- aave:dev --verify",
     "aave:ropsten:full:migration": "npm run buidler:ropsten -- aave:full --verify",
     "aave:main:dev:migration": "npm run buidler:main -- aave:dev --verify",
