--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "chai-bignumber": "3.0.0",
     "chai-bn": "^0.2.1",
     "eth-sig-util": "2.5.3",
-    "ethereum-waffle": "^3.1.2",
+    "ethereum-waffle": "3.0.2",
     "ethereumjs-util": "7.0.2",
     "ethers": "5.0.8",
     "globby": "^11.0.1",
