--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,3 +12,19 @@ test:
   after_script:
     - docker-compose -f docker-compose.test.yml run contracts-env npm run ci:clean
     - docker-compose -f docker-compose.test.yml down
+
+certora-test:
+  stage: test
+  image: openjdk:13
+  before_script:
+    - echo "export PATH=$PATH:~/.local/bin" >> $BASH_ENV
+    - sudo apt-get update || sudo apt-get update
+    - sudo apt-get install -y software-properties-common
+    - sudo apt-get install python3-pip
+    - pip3 install certora-cli-beta==0.4.1
+    - wget https://github.com/ethereum/solidity/releases/download/v0.6.8/solc-static-linux
+    - chmod +x solc-static-linux
+    - sudo mv solc-static-linux /usr/bin/solc
+  script:
+    - certoraRun specs/harness/StableDebtTokenHarness.sol:StableDebtTokenHarness --solc solc6.8 --verify StableDebtTokenHarness:specs/StableDebtToken. spec --settings -assumeUnwindCond --cache StableDebtToken --staging
+
