--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ test:
 
 certora-test:
   stage: test
-  image: openjdk:15-jdk - linux; amd64
+  image: openjdk:15-jdk
   before_script:
     - echo "export PATH=$PATH:~/.local/bin"
     - whereis sudo
