--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,20 +15,17 @@ test:
 
 certora-test:
   stage: test
-  image: openjdk:15.0-jdk
   tags:
     - linux
   before_script:
-    - wget http://security.ubuntu.com/ubuntu/pool/main/a/apt/apt_2.1.11_amd64.deb -O apt.deb
-    - pkexec dpkg -i apt.deb
     - echo "export PATH=$PATH:~/.local/bin"
-    - apt-get update || sudo apt-get update
-    - apt-get install -y software-properties-common
-    - apt-get install python3-pip
+    - sudo apt-get update || sudo apt-get update
+    - sudo apt-get install -y software-properties-common
+    - sudo apt-get install python3-pip
     - pip3 install certora-cli-beta==0.4.1
     - wget https://github.com/ethereum/solidity/releases/download/v0.6.8/solc-static-linux
     - chmod +x solc-static-linux
-    - mv solc-static-linux /usr/bin/solc
+    - sudo mv solc-static-linux /usr/bin/solc
   script:
     - certoraRun specs/harness/StableDebtTokenHarness.sol:StableDebtTokenHarness --solc solc6.8 --verify StableDebtTokenHarness:specs/StableDebtToken. spec --settings -assumeUnwindCond --cache StableDebtToken --staging
 
