--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,8 +15,7 @@ test:
 
 certora-test:
   stage: test
-  tags:
-    - linux
+  image: ubuntu:18.04
   before_script:
     - echo "export PATH=$PATH:~/.local/bin"
     - sudo apt-get update || sudo apt-get update
