--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,16 +15,17 @@ test:
 
 certora-test:
   stage: test
+  variables:
+    - PATH: "$PATH:~/.local/bin"
   image: ubuntu:18.04
   before_script:
-    - echo "export PATH=$PATH:~/.local/bin"
-    - sudo apt-get update || sudo apt-get update
-    - sudo apt-get install -y software-properties-common
-    - sudo apt-get install python3-pip
+    - apt-get update || apt-get update
+    - apt-get install -y software-properties-common
+    - apt-get install python3-pip
     - pip3 install certora-cli-beta==0.4.1
     - wget https://github.com/ethereum/solidity/releases/download/v0.6.8/solc-static-linux
     - chmod +x solc-static-linux
-    - sudo mv solc-static-linux /usr/bin/solc
+    - mv solc-static-linux /usr/bin/solc
   script:
     - certoraRun specs/harness/StableDebtTokenHarness.sol:StableDebtTokenHarness --solc solc6.8 --verify StableDebtTokenHarness:specs/StableDebtToken. spec --settings -assumeUnwindCond --cache StableDebtToken --staging
 
