--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ test:
 
 certora-test:
   stage: test
-  image: ubuntu:18.04
+  image: openjdk:15-jdk
   before_script:
     - apt-get update || apt-get update
     - apt-get install -y software-properties-common
