--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,7 @@ certora-test:
   stage: test
   image: python:latest
   before_script:
+    - echo "export PATH=$PATH:~/.local/bin" >> $BASH_ENV
     - apt-get update || apt-get update
     - apt-get install -y software-properties-common
     - pip3 install certora-cli-beta==0.4.1
@@ -24,5 +25,5 @@ certora-test:
     - chmod +x solc-static-linux
     - mv solc-static-linux /usr/bin/solc
   script:
-    - certoraRun specs/harness/StableDebtTokenHarness.sol:StableDebtTokenHarness --solc solc6.8 --verify StableDebtTokenHarness:specs/StableDebtToken. spec --settings -assumeUnwindCond --cache StableDebtToken --staging
+    - certoraRun specs/harness/StableDebtTokenHarness.sol:StableDebtTokenHarness --solc solc6.8 --verify StableDebtTokenHarness:specs/StableDebtToken spec --settings -assumeUnwindCond --cache StableDebtToken --staging
 
