--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,10 +17,15 @@ certora-test:
   stage: test
   image: python:latest
   before_script:
-    - echo export PATH=$PATH:~/.local/bin
+    - export PATH=$PATH:~/.local/bin
     - apt-get update || apt-get update
     - apt-get install -y software-properties-common
-    - apt-get install openjdk-13-jdk
+    - apt-get install curl
+    - curl -O https://download.java.net/java/GA/jdk13/5b8a42f3905b406298b72d750b6919f6/33/GPL/openjdk-13_linux-x64_bin.tar.gz
+    - tar xvf openjdk-13_linux-x64_bin.tar.gz
+    - mv jdk-13 ~/usr/lib/
+    - export JAVA_HOME=~/usr/lib/jdk-13
+    - export PATH=$PATH:$JAVA_HOME/bin
     - pip3 install certora-cli-beta==0.4.1
     - wget https://github.com/ethereum/solidity/releases/download/v0.6.8/solc-static-linux
     - chmod +x solc-static-linux
