--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "aave:docker:full:migration": "npm run buidler:docker -- aave:full",
     "aave:kovan:dev:migration": "npm run buidler:kovan -- aave:dev --verify",
     "aave:kovan:full:migration": "npm run buidler:kovan -- aave:full --verify",
+    "aave:kovan:full:initialize": "npm run buidler:kovan -- full:initialize-lending-pool --verify --pool Aave",
     "aave:ropsten:dev:migration": "npm run buidler:ropsten -- aave:dev --verify",
     "aave:ropsten:full:migration": "npm run buidler:ropsten -- aave:full --verify",
     "aave:main:dev:migration": "npm run buidler:main -- aave:dev --verify",
