Support Buidler to run solidity-coverage until is ported.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "hardhat:main": "hardhat --network main",
     "hardhat:docker": "hardhat --network hardhatevm_docker",
     "compile": "SKIP_LOAD=true hardhat compile",
-    "test": "TS_NODE_TRANSPILE_ONLY=1 hardhat test",
+    "test": "SKIP_LOAD=true TS_NODE_TRANSPILE_ONLY=1 hardhat test",
     "test-scenarios": "npm run test -- test/__setup.spec.ts test/scenario.spec.ts",
     "aave:evm:dev:migration": "hardhat aave:dev",
     "aave:evm:full:migration": "hardhat aave:full",
@@ -44,7 +44,7 @@
     "test-stable-and-atokens": "hardhat test test/__setup.spec.ts test/atoken-transfer.spec.ts test/stable-token.spec.ts",
     "test-subgraph:scenarios": "hardhat --network hardhatevm_docker test test/__setup.spec.ts test/subgraph-scenarios.spec.ts",
     "test-weth": "hardhat test test/__setup.spec.ts test/weth-gateway.spec.ts",
-    "dev:coverage": "buidler coverage --network coverage",
+    "dev:coverage": "buidler compile --force && buidler coverage --network coverage",
     "dev:deployment": "hardhat dev-deployment",
     "dev:deployExample": "hardhat deploy-Example",
     "dev:prettier": "prettier --write .",
