--- a/package.json
+++ b/package.json
@@ -61,7 +61,6 @@
     "@nomiclabs/buidler-etherscan": "^2.1.0",
     "@nomiclabs/buidler-waffle": "2.0.0",
     "@nomiclabs/hardhat-ethers": "^2.0.0",
-    "@nomiclabs/hardhat-etherscan": "^2.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.0",
     "@openzeppelin/contracts": "3.1.0",
     "@typechain/ethers-v4": "1.0.0",
@@ -93,6 +92,7 @@
     "prettier-plugin-solidity": "^1.0.0-alpha.53",
     "pretty-quick": "^2.0.1",
     "solidity-coverage": "0.7.10",
+    "temp-hardhat-etherscan": "^2.0.0",
     "ts-generator": "0.0.8",
     "ts-node": "^8.10.2",
     "tslint": "^6.1.2",
