--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,3 +15,6 @@ services:
       ETHERSCAN_KEY: ${ETHERSCAN_KEY}
       INFURA_KEY: ${INFURA_KEY}
       ETHERSCAN_NETWORK: ${ETHERSCAN_NETWORK}
+      TENDERLY_PROJECT: ${TENDERLY_PROJECT}
+      TENDERLY_USERNAME: ${TENDERLY_USERNAME}
+      ALCHEMY_KEY: ${ALCHEMY_KEY}
