--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "run-env": "npm i && tail -f /dev/null",
     "hardhat": "hardhat",
     "hardhat:kovan": "hardhat --network kovan",
+    "hardhat:tenderly-main": "hardhat --network tenderlyMain",
     "hardhat:ropsten": "hardhat--network ropsten",
     "hardhat:main": "hardhat --network main",
     "hardhat:docker": "hardhat --network hardhatevm_docker",
@@ -21,6 +22,7 @@
     "aave:kovan:full:initialize": "npm run hardhat:kovan -- full:initialize-lending-pool --verify --pool Aave",
     "aave:ropsten:dev:migration": "npm run hardhat:ropsten -- aave:dev --verify",
     "aave:ropsten:full:migration": "npm run hardhat:ropsten -- aave:full --verify",
+    "aave:fork:main:migration": "npm run hardhat:tenderly-main -- aave:full:fork",
     "aave:main:dev:migration": "npm run hardhat:main -- aave:dev --verify",
     "aave:main:full:migration": "npm run hardhat:main -- aave:full --verify",
     "uniswap:evm:dev:migration": "hardhat uniswap:dev",
