Added initial README. Digging into Tenderly. Added initial mainnet fork with buidler.

--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "aave:kovan:full:initialize": "npm run hardhat:kovan -- full:initialize-lending-pool --verify --pool Aave",
     "aave:ropsten:dev:migration": "npm run hardhat:ropsten -- aave:dev --verify",
     "aave:ropsten:full:migration": "npm run hardhat:ropsten -- aave:full --verify",
-    "aave:fork:main:tendery": "npm run hardhat:tenderly-main -- aave:full:fork",
-    "aave:fork:main": "MAINNET_FORK=true npm run aave:full:fork",
+    "aave:fork:main:tenderly": "npm run hardhat:tenderly-main -- aave:full:fork",
+    "aave:fork:main": "MAINNET_FORK=true hardhat aave:full:fork",
     "aave:main:dev:migration": "npm run hardhat:main -- aave:dev --verify",
     "aave:main:full:migration": "npm run hardhat:main -- aave:full --verify",
     "uniswap:evm:dev:migration": "hardhat uniswap:dev",
