Added mainnet check list. Remove deployed contracts. Update README.md

--- a/package.json
+++ b/package.json
@@ -11,21 +11,17 @@
     "hardhat:main": "hardhat --network main",
     "hardhat:docker": "hardhat --network hardhatevm_docker",
     "compile": "SKIP_LOAD=true hardhat compile",
-    "test": "SKIP_LOAD=true TS_NODE_TRANSPILE_ONLY=1 hardhat test",
+    "test": "TS_NODE_TRANSPILE_ONLY=1 hardhat test ./test/*.spec.ts",
     "test-scenarios": "npm run test -- test/__setup.spec.ts test/scenario.spec.ts",
     "aave:evm:dev:migration": "hardhat aave:dev",
-    "aave:evm:full:migration": "hardhat aave:full",
-    "aave:docker:dev:migration": "npm run hardhat:docker -- aave:dev",
     "aave:docker:full:migration": "npm run hardhat:docker -- aave:full",
-    "aave:kovan:dev:migration": "npm run hardhat:kovan -- aave:dev --verify",
     "aave:kovan:full:migration": "npm run hardhat:kovan -- aave:full --verify",
     "aave:kovan:full:initialize": "npm run hardhat:kovan -- full:initialize-lending-pool --verify --pool Aave",
-    "aave:ropsten:dev:migration": "npm run hardhat:ropsten -- aave:dev --verify",
     "aave:ropsten:full:migration": "npm run hardhat:ropsten -- aave:full --verify",
-    "aave:fork:main:tenderly": "npm run hardhat:tenderly-main -- aave:full:fork",
-    "aave:fork:main": "MAINNET_FORK=true hardhat aave:full:fork",
-    "aave:main:dev:migration": "npm run hardhat:main -- aave:dev --verify",
-    "aave:main:full:migration": "npm run hardhat:main -- aave:full --verify",
+    "aave:fork:main:tenderly": "npm run hardhat:tenderly-main -- aave:mainnet",
+    "aave:fork:main": "MAINNET_FORK=true hardhat aave:mainnet",
+    "test:main:check-list": "MAINNET_FORK=true TS_NODE_TRANSPILE_ONLY=1 hardhat test  test/__setup.spec.ts test/mainnet/check-list.spec.ts",
+    "aave:main:full:migration": "npm run hardhat:main -- aave:mainnet --verify",
     "uniswap:evm:dev:migration": "hardhat uniswap:dev",
     "uniswap:evm:full:migration": "hardhat uniswap:full --verify",
     "uniswap:kovan:dev:migration": "npm run hardhat:kovan -- uniswap:dev --verify",
