Remove Uniswap V1 config and scripts. Renamed config to markets.

--- a/package.json
+++ b/package.json
@@ -13,23 +13,6 @@
     "compile": "SKIP_LOAD=true hardhat compile",
     "test": "TS_NODE_TRANSPILE_ONLY=1 hardhat test ./test/*.spec.ts",
     "test-scenarios": "npm run test -- test/__setup.spec.ts test/scenario.spec.ts",
-    "aave:evm:dev:migration": "hardhat aave:dev",
-    "aave:docker:full:migration": "npm run hardhat:docker -- aave:full",
-    "aave:kovan:full:migration": "npm run hardhat:kovan -- aave:full --verify",
-    "aave:kovan:full:initialize": "npm run hardhat:kovan -- full:initialize-lending-pool --verify --pool Aave",
-    "aave:ropsten:full:migration": "npm run hardhat:ropsten -- aave:full --verify",
-    "aave:fork:main:tenderly": "npm run hardhat:tenderly-main -- aave:mainnet",
-    "aave:fork:main": "MAINNET_FORK=true hardhat aave:mainnet",
-    "test:main:check-list": "MAINNET_FORK=true TS_NODE_TRANSPILE_ONLY=1 hardhat test  test/__setup.spec.ts test/mainnet/check-list.spec.ts",
-    "aave:main:full:migration": "npm run hardhat:main -- aave:mainnet --verify",
-    "uniswap:evm:dev:migration": "hardhat uniswap:dev",
-    "uniswap:evm:full:migration": "hardhat uniswap:full --verify",
-    "uniswap:kovan:dev:migration": "npm run hardhat:kovan -- uniswap:dev --verify",
-    "uniswap:kovan:full:migration": "npm run hardhat:kovan -- uniswap:full --verify",
-    "uniswap:ropsten:dev:migration": "npm run hardhat:ropsten -- uniswap:dev --verify",
-    "uniswap:ropsten:full:migration": "npm run hardhat:ropsten -- uniswap:full --verify",
-    "uniswap:main:dev:migration": "npm run hardhat:main -- uniswap:dev --verify",
-    "uniswap:main:full:migration": "npm run hardhat:main -- uniswap:full --verify",
     "test-repay-with-collateral": "hardhat test test/__setup.spec.ts test/repay-with-collateral.spec.ts",
     "test-liquidate-with-collateral": "hardhat test test/__setup.spec.ts test/flash-liquidation-with-collateral.spec.ts",
     "test-liquidate-underlying": "hardhat test test/__setup.spec.ts test/liquidation-underlying.spec.ts",
@@ -43,9 +26,16 @@
     "test-stable-and-atokens": "hardhat test test/__setup.spec.ts test/atoken-transfer.spec.ts test/stable-token.spec.ts",
     "test-subgraph:scenarios": "hardhat --network hardhatevm_docker test test/__setup.spec.ts test/subgraph-scenarios.spec.ts",
     "test-weth": "hardhat test test/__setup.spec.ts test/weth-gateway.spec.ts",
+    "test:main:check-list": "MAINNET_FORK=true TS_NODE_TRANSPILE_ONLY=1 hardhat test  test/__setup.spec.ts test/mainnet/check-list.spec.ts",
     "dev:coverage": "buidler compile --force && buidler coverage --network coverage",
-    "dev:deployment": "hardhat dev-deployment",
-    "dev:deployExample": "hardhat deploy-Example",
+    "aave:evm:dev:migration": "npm run compile && hardhat aave:dev",
+    "aave:docker:full:migration": "npm run compile && npm run hardhat:docker -- aave:full",
+    "aave:kovan:full:migration": "npm run compile && npm run hardhat:kovan -- aave:full --verify",
+    "aave:kovan:full:initialize": "npm run hardhat:kovan -- full:initialize-lending-pool --verify --pool Aave",
+    "aave:ropsten:full:migration": "npm run compile && npm run hardhat:ropsten -- aave:full --verify",
+    "aave:fork:main:tenderly": "npm run compile && npm run hardhat:tenderly-main -- aave:mainnet",
+    "aave:fork:main": "MAINNET_FORK=true npm run compile && hardhat aave:mainnet",
+    "aave:main:full:migration": "npm run hardhat:main -- aave:mainnet --verify",
     "dev:prettier": "prettier --write .",
     "ci:test": "npm run compile && npm run test",
     "ci:clean": "rm -rf ./artifacts ./cache ./types",
@@ -125,6 +115,10 @@
     {
       "name": "Andrey Kozlov",
       "email": "andrey@aave.com"
+    },
+    {
+      "name": "David Racero",
+      "email": "david.k@aave.com"
     }
   ],
   "license": "AGPLv3",
