Renamed ChainlinkProxyPriceProvider to AaveOracle

--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "test:main:check-list": "MAINNET_FORK=true TS_NODE_TRANSPILE_ONLY=1 hardhat test  test/__setup.spec.ts test/mainnet/check-list.spec.ts",
     "dev:coverage": "buidler compile --force && buidler coverage --network coverage",
     "aave:evm:dev:migration": "npm run compile && hardhat aave:dev",
-    "aave:docker:full:migration": "npm run compile && npm run hardhat:docker -- aave:full",
-    "aave:kovan:full:migration": "npm run compile && npm run hardhat:kovan -- aave:full --verify",
+    "aave:docker:full:migration": "npm run compile && npm run hardhat:docker -- aave:mainnet",
+    "aave:kovan:full:migration": "npm run compile && npm run hardhat:kovan -- aave:mainnet --verify",
     "aave:kovan:full:initialize": "npm run hardhat:kovan -- full:initialize-lending-pool --verify --pool Aave",
-    "aave:ropsten:full:migration": "npm run compile && npm run hardhat:ropsten -- aave:full --verify",
+    "aave:ropsten:full:migration": "npm run compile && npm run hardhat:ropsten -- aave:mainnet --verify",
     "aave:fork:main:tenderly": "npm run compile && npm run hardhat:tenderly-main -- aave:mainnet",
     "aave:fork:main": "MAINNET_FORK=true npm run compile && hardhat aave:mainnet",
     "aave:main:full:migration": "npm run hardhat:main -- aave:mainnet --verify",
